Closed
Bug 1451971
Opened 8 years ago
Closed 8 years ago
Flickering navbar on ESPN
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
VERIFIED
FIXED
mozilla61
| Tracking | Status | |
|---|---|---|
| firefox-esr52 | --- | unaffected |
| firefox59 | --- | unaffected |
| firefox60 | --- | unaffected |
| firefox61 | + | verified |
People
(Reporter: yoasif, Assigned: mattwoodrow)
References
()
Details
(Keywords: nightly-community, regression)
Attachments
(3 files)
STR:
1. Visit http://www.espn.com/nba/scoreboard
2. Hover over navbar entries (NFL/NBA/MLB etc., or subnav below - Home, Scores, Schedule, etc.)
What happens:
Entire navbar begins to flicker/disappear, turning gray
Expected result:
As when layout.display-list.retain is set to false.
21:30.18 INFO: Narrowed inbound regression window from [6415ccbf, d5135503] (3 builds) to [6415ccbf, d112cf7b] (2 builds) (~1 steps left)
21:30.18 INFO: No more inbound revisions, bisection finished.
21:30.18 INFO: Last good revision: 6415ccbf739f36f71548540bd92c3b86ab9e1529
21:30.18 INFO: First bad revision: d112cf7b2b60e6244099dc3b599a2444ba0d1da3
21:30.18 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=6415ccbf739f36f71548540bd92c3b86ab9e1529&tochange=d112cf7b2b60e6244099dc3b599a2444ba0d1da3
| Reporter | ||
Updated•8 years ago
|
Blocks: 1443027
Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: nightly-community,
regression
Updated•8 years ago
|
status-firefox59:
--- → unaffected
status-firefox60:
--- → unaffected
status-firefox-esr52:
--- → unaffected
tracking-firefox61:
--- → +
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Comment 1•8 years ago
|
||
I can reproduce this in Nightly, but it looks to be working again in my local m-c build. Might have been fixed by bug 1451384.
Comment 2•8 years ago
|
||
Hmm, I did a local build after that round of merges and can still reproduce on Win10. I do have WR enabled if that matters.
Comment 3•8 years ago
|
||
Still reproduces for me on a different Win10 system as well with m-c tip and a clean profile.
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → matt.woodrow
| Assignee | ||
Comment 4•8 years ago
|
||
Ok, I fully understand this issue now and am working on a fix. I found a few unrelated, but interesting bugs in the process, lots to do!
Flags: needinfo?(matt.woodrow)
| Comment hidden (mozreview-request) |
| Comment hidden (mozreview-request) |
Comment 7•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8966910 [details]
Bug 1451971 - Add new reftest for changing content within perspective without breaking sorting.
https://reviewboard.mozilla.org/r/235572/#review241368
Attachment #8966910 -
Flags: review?(mikokm) → review+
Comment 8•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8966911 [details]
Bug 1451971 - Rebuild the whole page when we have perspective or preserve-3d.
https://reviewboard.mozilla.org/r/235574/#review241434
Attachment #8966911 -
Flags: review?(mikokm) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/79a5ebb7f796
Add new reftest for changing content within perspective without breaking sorting. r=miko
https://hg.mozilla.org/integration/autoland/rev/6a8df72533ba
Rebuild the whole page when we have perspective or preserve-3d. r=miko
Comment 10•8 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/79a5ebb7f796
https://hg.mozilla.org/mozilla-central/rev/6a8df72533ba
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Updated•8 years ago
|
Summary: Flickering nabvar on ESPN → Flickering navbar on ESPN
Updated•8 years ago
|
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•