Bug 1451971 - Rebuild the whole page when we have perspective or preserve-3d. r=miko

MozReview-Commit-ID: 2SkKvpdLWMi

--HG--
extra : rebase_source : 6b19d557a93fb3e0f2a2faf34f238b96c3e0f0bd